--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,21 @@
-#root {
-  background: linear-gradient(0deg, rgba(14,150,255,1) 0%, rgba(42,219,243,1) 100%);
+:root {
+  --font: rgb(50, 15, 107);
+  --purple: rgb(123, 66, 255, 0.6);
+  --blue: rgb(5, 217, 255, 0.6);
+  --blueDark: rgba(5, 217, 255, 0.9);
+  --yellow: rgba(255, 232, 155, 0.6);
+  --purpleGradient: linear-gradient(306deg, rgba(123,66,255,1) 0%, rgba(128,129,255,1) 100%);
+  --purpleGradientLight: linear-gradient(306deg, rgba(123,66,255,0.4) 0%, rgba(128,129,255,0.4) 100%);
+}
+
+.linearGrad {
+  background: rgb(197,217,252);
+  background: linear-gradient(300deg, rgba(197,217,252,0.7) 0%, rgba(236,220,243,0.7) 100%);
   height: 100vh;
   width: 100vw;
   position: fixed;
+  top: 0;left:0;
+  z-index: -1;
 }
 #hide {
   display:none;
@@ -96,11 +109,19 @@ position: relative;
 width: 80px;
 height: 80px;
 }
+.white div {
+  background: white;
+}
+.purpleD div {
+  background: var(--purple);
+}
+.fontD div {
+  background: var(--font);
+}
 .lds-default div {
 position: absolute;
 width: 6px;
 height: 6px;
-background: #fff;
 border-radius: 50%;
 animation: lds-default 1.2s linear infinite;
 }
@@ -231,11 +252,197 @@ left: 62px;
   justify-content: center;
 }
 .btn {
-  padding: 7.5px;
-  width: 115px;
-  height: 50px;
+  padding: 10px 20px;
   background: black;
   color: white; 
   border: none; 
+  border-radius: 5px; text-transform: capitalize;
+  text-align: center; font-family: poppins, sans-serif;
+  font-weight: 200; outline: none; height: auto;
+}
+
+
+
+/* DASHBOARD */
+.dashFlex {
+  width: 100vw;
+  display: flex;
+}
+.btnHolder {
+  right: 0;
+  top: 0;
+  padding-top: 50px;
+  height: calc(100vh - 50px);
+  float: right;
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap:25px;
+  background: rgba(255, 255, 255, 0.6);
+  position: fixed;
+}
+.mainSection {
+  width: calc(100vw - 300px - 250px); 
+  font-family: poppins;
+  color: var(--font); font-size: 20px;
+  padding-left: 50px;
+}
+.leftPanel {
+  width: 250px;
+  float:left;
+  height: auto; top: 0; background: transparent;
+  margin-top: -30px; padding-top: 50px; gap: 20px;
+  padding-left: 10px;
+  /* display: flex; flex-direction: column; justify-content: space-evenly; */
+  display: grid; grid-template-columns: repeat(2, 100px); grid-template-rows: repeat(4, 250px);
+}
+.widget {
+  width: 200px; height: 250px; border-radius: 5px; background: rgba(255, 255, 255, 0.603);
+}
+.widget0 {
+  grid-column: 1/span 2; grid-row: 1/span 1;
+}
+.widget1 {
+  grid-column: 1/span 2; grid-row: 2/span 1;
+}
+.widget2 {
+  grid-column: 1/span 2; grid-row: 3/span 1;
+}
+.widget3 {
+  grid-column: 1/span 2; grid-row: 4/span 1;
+}
+.widgImg {
+  width: 200px; height: 200px; border-radius: 5px; background-size:cover; background-position: center;
+}
+.head {
+  font-family: poppins; font-weight: 700; color: var(--font); font-size: 40px;
+  margin-top: 50px; display: flex; padding-bottom: 20px;
+}
+.insights {
+  margin-top: 25px; border-radius: 5px; font-size: 18px;
+  padding-left: 25px; padding-top: 25px; font-weight: 300;
+  display: flex; flex-direction: column;
+  width: 350px; height: 140px; background: rgba(255, 255, 255, 0.61);
+}
+.week {
+  font-family: 200; color: grey; font-size: 14px; text-transform: uppercase;
+}
+
+.iBtn {
+  width: 375px; background: var(--purple); height: 35px; margin-left: -25px; border-radius: 2.5px;
+}
+.flexMain {
+  display: flex; flex-direction: column; justify-content: space-between; height: 100%;
+}
+.headAvatar {
+  width: 50px; height: 50px; margin-right: 10px; 
+  border-radius: 50%; background-position: center; background-size: cover;
+}
+.headAvatar span {
+  margin-left: 5px;
+}
+
+
+.btnDash {
+  width: 160px;
+  padding: 12.5px 20px;
+  height: auto;
+  background: transparent;
+  color: white;
+  font-weight: 500;
+  border-radius: 2.5px;
+  text-align: center;
+  font-family: poppins, sans-serif;
+  border: none; cursor: pointer;
+}
+.purple {
+  background: var(--purple);
+}
+.purpleGradient {
+  background: var(--purpleGradient);
+}
+.yellow {
+  background: var(--yellow);
+}
+.blue {
+  background: var(--blueDark);
+}
+#shadow1 {
+  box-shadow: 
+  0px -10px 5px -10px var(--purple) inset, /*TOP*/
+  0px 5px 5px 0px white inset,  /*BTM*/
+  5px 0px 5px 0px white inset, /*RIGHT*/
+  -5px 0px 5px -2px var(--purple) inset; /*LEFT*/
+}
+.btnBlur {
+  display: block;
+  width: 200px; position: absolute;
+  background: var(--font); z-index: -1; 
+  margin-top: 185px; height: 45px; filter: blur(10px); margin-left: 12.5px;
+}
+.btnBlur2 {
+  display: none;
+}
+#shadow2 {
+  box-shadow: 
+  0px -10px 6px -6px white inset, /*TOP*/
+  0px 5px 7px -4px var(--purple) inset,  /*BTM*/
+  5px 0px 7px -4px var(--purple) inset, /*RIGHT*/
+  -5px 0px 6px 0.1px white inset; /*LEFT*/
+}
+
+.dashboardLoader {
+  width: 100vw;
+  height: 100vh;
+  position: fixed; top: 0; left: 0;
+  background: rgba(255, 255, 255, 0.4);
+  z-index: 20; display: flex; align-items: center; justify-content: center;
+}
+.dashboardBlurLoader {
+  width: 100vw;
+  height: 100vh;
+  position: fixed; top: 0; left: 0;
+  backdrop-filter: blur(10px);
+  z-index: 19; 
+}
+.btnPage {
+  width: 100vw;
+  height: 95vh;
+  display: flex; align-items: center; justify-content: center;
+  flex-direction: column; color: var(--font);
+}
+.btnPageName {
+  font-family: poppins, sans-serif;
+  font-size: 34px; font-weight: 700;
+  margin-bottom: 50px; margin-top: -120px;
+}
+.btnPageInfo {
+  font-family: poppins, sans-serif;
+  font-size: 18px; font-weight: 300;
+  width: 60vw; height: auto;
+  margin-bottom: 50px; text-align: center;
+}
+.btnPageLink {
+  background: rgb(18,87,233);
+  background: linear-gradient(250deg, rgba(18,87,233,1) 0%, rgba(77,130,242,1) 100%);
+  color: white;
+  font-family: poppins, sans-serif;
+  font-size: 18px; font-weight: 600;
+  padding: 15px 45px; text-decoration: none;
   border-radius: 5px;
+}
+
+.flexError {
+  display: flex; flex-direction: column; 
+  justify-content: center; align-items: center;
+  width: 100vw; height: 65vw;
+  font-family: poppins, sans-serif; color: var(--font);
+}
+.flexError h1 {
+  font-size: 26px; font-weight: 600; width: 500px; text-align: center;
+}
+.flexError a {
+  background: var(--purple);
+  padding: 20px 50px; border-radius: 5px; font-weight: 600; margin-top: 50px; text-decoration: none;
 }
