--- a/src/App.css
+++ b/src/App.css
@@ -297,8 +297,11 @@ left: 62px;
   /* display: flex; flex-direction: column; justify-content: space-evenly; */
   display: grid; grid-template-columns: repeat(2, 100px); grid-template-rows: repeat(4, 250px);
 }
+.fas {
+  color: var(--font);
+}
 .widget {
-  width: 200px; height: 250px; border-radius: 5px; background: rgba(255, 255, 255, 0.603);
+  width: 200px; height: 235px; border-radius: 5px; background: rgba(255, 255, 255, 0.603);
 }
 .widget0 {
   grid-column: 1/span 2; grid-row: 1/span 1;
@@ -350,7 +353,7 @@ left: 62px;
   height: auto;
   background: transparent;
   color: white;
-  font-weight: 500;
+  font-weight: 300;
   border-radius: 2.5px;
   text-align: center;
   font-family: poppins, sans-serif;
