--- a/src/components/login.css
+++ b/src/components/login.css
@@ -1,3 +1,13 @@
+:root {
+  --font: rgb(50, 15, 107);
+  --purple: rgb(123, 66, 255, 0.6);
+  --blue: rgb(5, 217, 255, 0.6);
+  --blueDark: rgba(5, 217, 255, 0.9);
+  --yellow: rgba(255, 232, 155, 0.6);
+  --purpleGradient: linear-gradient(306deg, rgba(123,66,255,1) 0%, rgba(128,129,255,1) 100%);
+  --purpleGradientLight: linear-gradient(306deg, rgba(123,66,255,0.4) 0%, rgba(128,129,255,0.4) 100%);
+}
+
 .form {
     display: flex;
     justify-content: center;
@@ -14,23 +24,26 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: rgba(255, 255, 255, 0.3);
+    background: rgba(255, 255, 255, 0.7);
     backdrop-filter: blur(10px);
     border-radius: 5px;
 }
 .rowMine h1 {
     margin-top: 50px;
     margin-bottom: 25px;
+    color: var(--font);
 }
 .rowMine input {
     background: transparent;
     border: none;
-    border-bottom: 1px solid black;
     width: 400px;
     margin-bottom: 30px;
     user-select: none;
     outline: none;
     margin-top: 10px;
+}
+.rowMine label {
+    color: var(--font);
 }
 .btnContain {
     width: 400px;
