--- a/src/App.css
+++ b/src/App.css
@@ -297,6 +297,11 @@ left: 62px;
   /* display: flex; flex-direction: column; justify-content: space-evenly; */
   display: grid; grid-template-columns: repeat(2, 100px); grid-template-rows: repeat(4, 250px);
 }
+@media (max-width: 920px) {
+  .leftPanel {
+    display: none;
+  }
+}
 .fas {
   color: var(--font);
 }
@@ -341,6 +346,11 @@ left: 62px;
 .headAvatar {
   width: 50px; height: 50px; margin-right: 10px; 
   border-radius: 50%; background-position: center; background-size: cover;
+}
+@media (max-width: 950px) {
+  .headAvatar {
+    display: none;
+  }
 }
 .headAvatar span {
   margin-left: 5px;
@@ -449,3 +459,296 @@ left: 62px;
   background: var(--purple);
   padding: 20px 50px; border-radius: 5px; font-weight: 600; margin-top: 50px; text-decoration: none;
 }
+
+
+
+
+
+
+/*FILE UPLOAD*/
+:root {
+  --font: rgb(50, 15, 107);
+}
+.formHeaders {
+  font-family: poppins;
+  color: var(--font);
+  margin-top: 20px;
+  margin-bottom: 10px;
+  text-align:center;
+  width: 60vw;
+  margin-left: 20vw;
+}
+.formHeaders h2 {
+  font-weight: 300;
+  font-size: 16px;
+}
+.formFlex {
+  font-family: poppins;
+  color: var(--font);
+  margin-top: -10px;
+}
+.formFlex h1 {
+  font-weight: 600;
+}
+.formFlex h2 {
+  font-weight: 300;
+}
+.inputForm {
+  width: 500px;
+  height: 500px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 5px;
+  margin: 0 auto;
+  gap: 10px;
+  align-items: center;
+}
+.inputForm label {
+  font-weight: 600; font-size: 14px; text-transform: capitalize;
+
+}
+#date {
+  background: rgba(255, 255, 255, 0.705); width:250px; padding: 5px; font-family: poppins; color: var(--font); border-radius: 5px; border: 1px solid var(--font);
+}
+#time {
+  background: rgba(255, 255, 255, 0.705); width:250px; padding: 5px; font-family: poppins; color: var(--font); border-radius: 5px; border: 1px solid var(--font);
+}
+#message {
+  background: rgba(255, 255, 255, 0.705); width:250px; padding: 5px; font-family: poppins; color: var(--font); border-radius: 5px; border: 1px solid var(--font);
+}
+.clearImg {
+  background: transparent; border: none; outline: none;
+  color: black; font-weight: 200; margin-top: 10px;
+}
+.fileBox {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: flex; flex-direction: column;
+  align-items: center; justify-content: center;
+  box-shadow: 2px 2px 10px var(--font);
+  border: none; color: white; padding: 20px 50px; background: var(--purple); border-radius: 2.5px;
+}
+.formFlex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  width: 100vw;
+}
+.uploadBtn {
+  width: 200px;
+  height: 45px;
+  line-height: 45px;
+  background: #e5e3ff;
+  color: var(--font);
+  font-weight: 200;
+  border-radius: 2.5px;
+  text-align: center;
+  border: none; 
+  padding: 5px;
+}
+#shadow1 {
+  box-shadow: 
+  0px -10px 5px -10px var(--font) inset, /*TOP*/
+  0px 5px 5px 0px white inset,  /*BTM*/
+  5px 0px 5px 0px white inset, /*RIGHT*/
+  -5px 0px 5px -2px var(--font) inset; /*LEFT*/
+}
+.btnBlur {
+  display: block;
+  width: 200px; position: absolute;
+  background: var(--font); z-index: -1; 
+  margin-top: 185px; height: 45px; filter: blur(10px); margin-left: 12.5px;
+}
+.btnBlur2 {
+  display: none;
+}
+#shadow2 {
+  box-shadow: 
+  0px -10px 6px -6px white inset, /*TOP*/
+  0px 5px 7px -4px var(--font) inset,  /*BTM*/
+  5px 0px 7px -4px var(--font) inset, /*RIGHT*/
+  -5px 0px 6px 0.1px white inset; /*LEFT*/
+}
+
+.btnSubmit {
+  width: 200px;
+  height: 50px;
+  line-height: 50px;
+  background: linear-gradient(310deg, rgba(0,19,79,1) 0%, rgb(49, 0, 71) 100%);
+  color: white;
+  font-family: poppins;
+  font-weight: 200;
+  border-radius: 2.5px;
+  text-align: center;
+  border: none; outline: none;
+  box-shadow: 8px 8px 12.5px 1px rgba(0,19,79,0.6);
+}
+.alert {
+  color:rgb(50, 15, 107);
+  font-weight: 700;
+}
+.entireWidth {
+  width: 100vw; height: 100vh;
+  position: absolute; z-index: 1; background: transparent;
+}
+.overlayDrag {
+  width: 700px; height: 480px; background: whitesmoke;
+  position: absolute; display: flex; gap: 10px;
+  align-items: center; justify-content: center;
+  padding: 20px;
+}
+.leftD {
+  width: 50%; background: whitesmoke; height: 99%;
+  display: flex; justify-content: center; align-items: center;
+}
+.rightD {
+  width: 50%; background: whitesmoke; height: 99%;
+  display: flex; flex-direction: column;
+}
+.rightD h1 {
+  font-size: 20px; padding-left: 15px; 
+  font-weight: 800;
+  margin-top: 50px; font-family: poppins, sans-serif;
+}
+.rightD .row {
+  width: 100%; height: 80px; 
+  padding-bottom: 20px;
+  border-bottom: 1px solid grey;
+  display: flex;
+}
+.rightD .row .left {
+  width: 30%;
+  height: 100%;
+}
+.rightD .row .left img {
+  width: 95%;
+  height: 100%;
+  border-radius: 5px;
+}
+.rightD .row .rF {
+  width: 70%;
+  margin-left: 10px;
+}
+.rightD .row .rF {
+  display: flex; flex-direction: column;
+}
+.rightD .row .rF .right {
+  font-family: poppins, sans-serif;
+  display: flex; gap: 10px;
+  justify-content: space-around;
+  width: 100%; height: 65%; align-items: center;
+}
+.rightD .row .line {
+  width: 100%;
+  flex-shrink: 0;
+  height: 7px;
+  background:rgb(0, 255, 213);
+  margin-left: 2px;
+  border-radius: 10px;
+  margin-top: -2px;
+}
+.rightD .row .right span {
+  margin-top: -15px;
+  user-select: none;
+}
+.rightD .row .right span:nth-child(1) {
+  font-weight: 700;
+}
+.rightD .row .right span:nth-child(3) {
+  font-weight: 700;
+  color: black;
+}
+.dropzone {
+  width: 90%; height: 85%; background: rgb(223, 223, 223);
+  margin-top: 15px; border-radius: 5px;
+}
+.dropzone h1 {
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 130px;
+  font-family: poppins, sans-serif;
+  color: rgb(77, 77, 77);
+  font-weight: 300;
+  margin-left: 35px; position: absolute;
+}
+.closeD {
+  width: 100%; flex-shrink: 0; height: 40px;
+  position: absolute;
+  top: 0;
+  border:none; background: var(--purple) ;color:white; font-family: poppins, sans-serif; font-weight: 300; font-size: 20px; border-radius: 5px;
+}
+
+
+.file-drop {
+  /* relatively position the container bc the contents are absolute */
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+.file-drop > .file-drop-target {
+  /* basic styles */
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  border-radius: 2px;
+
+  /* horizontally and vertically center all content */
+  display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+
+  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+
+  align-items: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+
+  justify-content: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+
+  align-content: center;
+  -webkit-align-content: center;
+  -ms-flex-line-pack: center;
+
+  text-align: center;
+}
+
+.file-drop > .file-drop-target.file-drop-dragging-over-frame {
+  /* overlay a black mask when dragging over the frame */
+  border: none;
+  background-color: rgba(0, 0, 0, 0.65);
+  box-shadow: none;
+  z-index: 50;
+  opacity: 1;
+
+  /* typography */
+  color: white;
+}
+
+.file-drop > .file-drop-target.file-drop-dragging-over-target {
+  /* turn stuff orange when we are dragging over the target */
+  color: #ff6e40;
+  box-shadow: 0 0 13px 3px #ff6e40;
+}
+
+
+
+
+
+
+
+
